crates/rome_js_formatter/tests/specs/prettier/js/decorator-auto-accessors/private.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: private.js
---
# Input
```js
class Foo {
  accessor #bar;
}

```

# Output
```js
class Foo {
  accessor;
  #bar;
}

```

# Errors
```
error[SyntaxError]: expected a semicolon to end the class property, but found none
  ┌─ private.js:2:3
  │
2 │   accessor #bar;
  │   ^^^^^^^^


```


